# kahdifire

./: COPYING  ChangeLog  Makefile.am  README.md  c_decls_to_xml.la  configure.ac  libtool
.libs/: c_decls_to_xml.la  c_decls_to_xml.lai  c_decls_to_xml.so.0  c_decls_to_xml.so.0.0.0
examples/: example.h  prog.c  test_struct.c
include/: annotation.h  c_decls_to_xml.h  common.h  doxygen.h  gplv3.txt.h  header-array.h  header-avl.h  header-list.h  header.h  kahdifire.h  lgplv3.txt.h  license.h  makefile.h  options.h  publicdomain.txt.h  readme.h  source-array.h  source-avl.h  source-list.h  source.h  strapp.h  usalgplv3.txt.h
man/: kahdifire.1
src/: annotation.c  c_decls_to_xml.cpp  c_decls_to_xml_la-c_decls_to_xml.lo  common.c  doxygen.c  header-array.c  header-avl.c  header-list.c  header.c  kahdifire.c  license.c  makefile.c  options.c  readme.c  source-array.c  source-avl.c  source-list.c  source.c  strapp.c
